@@ -3,8 +3,10 @@ This file lists big/noteworthy changes, only...
 Version 0.7 (upcoming)
 dyncall updates:
   o inital support for syscalls on x86
-  o generic assembly files support for x86 and x64 (supports gas and ml)
+  o generic assembly files support for x86 and x64 (supports gas, Apple's as and ml)
   o documentation update and fixes
+  o generic assembly for arm (supports gas and Apple's as)
+  o generic assembly for ppc32 (supports gas and Apple's as)
 dynload updates:
   o fixes for self-resolving symbols on windows
 buildsys/gmake:
